# ================================================================================
# ================================================================================
# - File:    CMakeLists.txt
# - Purpose: Secondary CMake file for C build system
#
# Source Metadata
# - Author:  Jillian Epstein 
# - Date:    June 29, 2022
# - Version: 1.0
# - Copyright: Copyright 2022, Jillian Epstein Inc.
# ================================================================================
# ================================================================================

add_library(include
    vector.c
	vector.h
)

target_include_directories(include PUBLIC .)
# ================================================================================
# ================================================================================
# eof
